[gd_scene load_steps=29 format=3 uid="uid://bf3yqmkn5tw17"]

[ext_resource type="Texture2D" uid="uid://b6bldh7ukfv6p" path="res://content/sprites/terrain atlas.png" id="1_lwnrx"]
[ext_resource type="Script" path="res://scripts/World.gd" id="1_vidxh"]
[ext_resource type="Script" path="res://scripts/units_manager/UnitsManager.gd" id="2_1pgd0"]
[ext_resource type="Script" path="res://scripts/Pathfinding.gd" id="3_0wwuy"]
[ext_resource type="Resource" uid="uid://ce4x8ilct2imn" path="res://data/settings/unit/unit_setting0.tres" id="3_5rc2h"]
[ext_resource type="Resource" uid="uid://mn2771n5e5qo" path="res://data/settings/unit/unit_setting_enemy.tres" id="4_8ur0q"]
[ext_resource type="Script" path="res://scripts/cells/CellObject.gd" id="6_khaqo"]
[ext_resource type="PackedScene" uid="uid://banafdl7532kg" path="res://scenes/2d/TileNode.tscn" id="8_6cw3x"]
[ext_resource type="PackedScene" uid="uid://bl8mjd5oq6mgq" path="res://scenes/2d/TileNodeWalkable.tscn" id="8_lk1gh"]
[ext_resource type="PackedScene" uid="uid://2ikcthg31xdg" path="res://scenes/2d/UnitObject.tscn" id="8_u5vun"]
[ext_resource type="Script" path="res://scripts/units_manager/WalkingModule.gd" id="9_42fdl"]
[ext_resource type="Script" path="res://scripts/InputSystem.gd" id="10_yja2f"]
[ext_resource type="Script" path="res://scripts/units_manager/ShootingModule.gd" id="10_yumpn"]
[ext_resource type="Script" path="res://scripts/visual/EffectManager.gd" id="11_cpn0u"]
[ext_resource type="Script" path="res://scripts/CameraController.gd" id="11_sv5rh"]
[ext_resource type="Script" path="res://scripts/Raycaster.gd" id="12_pdk27"]
[ext_resource type="PackedScene" uid="uid://bncbloimsnrob" path="res://scenes/2d/Bullet2D.tscn" id="12_ri7ra"]
[ext_resource type="Script" path="res://scripts/utility_ai/BrainAI.gd" id="15_y513k"]
[ext_resource type="Resource" uid="uid://bvwkx08fi3j4f" path="res://data/settings/utility ai/ActionMove.tres" id="17_gjgab"]
[ext_resource type="Resource" uid="uid://cogp64iiq2s6y" path="res://data/settings/utility ai/ActionReload.tres" id="18_8v7si"]
[ext_resource type="Resource" uid="uid://cv0nsfwodcjy4" path="res://data/settings/utility ai/ActionShoot.tres" id="19_2d76o"]
[ext_resource type="PackedScene" path="res://scenes/2d/Line2dManager.tscn" id="20_syji7"]

[sub_resource type="Resource" id="Resource_w5cxt"]
script = ExtResource("6_khaqo")
atlas_coords = null
obj_type = 1

[sub_resource type="Resource" id="Resource_xbsyj"]
script = ExtResource("6_khaqo")
atlas_coords = Vector2i(1, 0)
obj_type = 2

[sub_resource type="Resource" id="Resource_t1k6d"]
script = ExtResource("6_khaqo")
atlas_coords = Vector2i(2, 0)
obj_type = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_plu3x"]
texture = ExtResource("1_lwnrx")
texture_region_size = Vector2i(64, 64)
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:0/0 = 0
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0yjwk"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_plu3x")

[sub_resource type="AtlasTexture" id="AtlasTexture_pp6uq"]
atlas = ExtResource("1_lwnrx")
region = Rect2(64, 64, 64, 64)

[node name="World" type="Node2D"]
script = ExtResource("1_vidxh")

[node name="UnitsManager" type="Node2D" parent="."]
script = ExtResource("2_1pgd0")
show_enemy_raycast = true
units_data = [ExtResource("3_5rc2h"), ExtResource("4_8ur0q")]
unit_objects = [NodePath("UnitObject0"), NodePath("UnitObject1")]

[node name="Pathfinding" type="Node2D" parent="UnitsManager"]
script = ExtResource("3_0wwuy")
cell_objects = [SubResource("Resource_w5cxt"), SubResource("Resource_xbsyj"), SubResource("Resource_t1k6d")]
tile_node_scene = ExtResource("8_6cw3x")
tile_walkable_scene = ExtResource("8_lk1gh")

[node name="TileMap" type="TileMap" parent="UnitsManager/Pathfinding"]
tile_set = SubResource("TileSet_0yjwk")
format = 2
layer_0/name = "Base"
layer_0/tile_data = PackedInt32Array(65537, 131072, 0, 65538, 131072, 0, 131073, 131072, 0, 983041, 131072, 0, 917505, 131072, 0, 851969, 131072, 0, 786433, 131072, 0, 983042, 131072, 0, 983043, 131072, 0, 983044, 131072, 0, 983045, 131072, 0, 983046, 131072, 0, 983047, 131072, 0, 983048, 131072, 0, 983050, 131072, 0, 983051, 131072, 0, 983052, 131072, 0, 983053, 131072, 0, 983054, 131072, 0, 983055, 131072, 0, 983056, 131072, 0, 983057, 131072, 0, 983058, 131072, 0, 983059, 131072, 0, 983060, 131072, 0, 983061, 131072, 0, 983062, 131072, 0, 983063, 131072, 0, 983064, 131072, 0, 983065, 131072, 0, 983066, 131072, 0, 983067, 131072, 0, 983068, 131072, 0, 917532, 131072, 0, 851996, 131072, 0, 786460, 131072, 0, 720924, 131072, 0, 655388, 131072, 0, 589852, 131072, 0, 524316, 131072, 0, 458780, 131072, 0, 393244, 131072, 0, 327708, 131072, 0, 262172, 131072, 0, 196636, 131072, 0, 131100, 131072, 0, 65564, 131072, 0, 65563, 131072, 0, 65562, 131072, 0, 65561, 131072, 0, 65560, 131072, 0, 65559, 131072, 0, 65558, 131072, 0, 65557, 131072, 0, 65556, 131072, 0, 65555, 131072, 0, 65554, 131072, 0, 65553, 131072, 0, 65552, 131072, 0, 65551, 131072, 0, 65550, 131072, 0, 65549, 131072, 0, 65548, 131072, 0, 65547, 131072, 0, 65546, 131072, 0, 65545, 131072, 0, 65544, 131072, 0, 65543, 131072, 0, 65542, 131072, 0, 65541, 131072, 0, 65540, 131072, 0, 65539, 131072, 0, 196609, 131072, 0, 262145, 131072, 0, 327681, 131072, 0, 393217, 131072, 0, 458753, 131072, 0, 524289, 131072, 0, 589825, 131072, 0, 655361, 131072, 0, 720897, 131072, 0, 524300, 0, 0, 458764, 0, 0, 393228, 0, 0, 327692, 0, 0, 262156, 0, 0, 196620, 0, 0, 131084, 0, 0, 131083, 0, 0, 131082, 0, 0, 131081, 0, 0, 131080, 0, 0, 131079, 0, 0, 131078, 0, 0, 131077, 0, 0, 131076, 0, 0, 131075, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 786434, 0, 0, 851970, 0, 0, 917506, 0, 0, 917507, 0, 0, 851971, 0, 0, 786435, 0, 0, 720899, 0, 0, 655363, 0, 0, 589827, 0, 0, 524291, 0, 0, 458755, 0, 0, 393219, 0, 0, 327683, 0, 0, 262147, 0, 0, 196611, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 786436, 0, 0, 851972, 0, 0, 917508, 0, 0, 917509, 0, 0, 851973, 0, 0, 786437, 0, 0, 720901, 65536, 0, 655365, 65536, 0, 589829, 65536, 0, 524293, 65536, 0, 458757, 65536, 0, 393221, 65536, 0, 327685, 0, 0, 262149, 0, 0, 196613, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 65536, 0, 786438, 0, 0, 851974, 0, 0, 917510, 0, 0, 917511, 0, 0, 851975, 0, 0, 786439, 0, 0, 720903, 65536, 0, 655367, 0, 0, 589831, 0, 0, 524295, 0, 0, 458759, 0, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 196615, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 65536, 0, 786440, 0, 0, 851976, 0, 0, 917512, 0, 0, 917513, 0, 0, 851977, 0, 0, 786441, 0, 0, 720905, 65536, 0, 655369, 65536, 0, 589833, 0, 0, 524297, 0, 0, 458761, 0, 0, 393225, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 917514, 0, 0, 917515, 0, 0, 851979, 0, 0, 786443, 0, 0, 720907, 0, 0, 655371, 0, 0, 589835, 0, 0, 524299, 0, 0, 458763, 0, 0, 393227, 0, 0, 327691, 0, 0, 262155, 0, 0, 196619, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 786444, 0, 0, 851980, 0, 0, 917516, 0, 0, 917517, 0, 0, 851981, 0, 0, 786445, 0, 0, 720909, 0, 0, 655373, 0, 0, 589837, 0, 0, 524301, 0, 0, 327693, 0, 0, 262157, 0, 0, 196621, 0, 0, 131085, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 786446, 0, 0, 851982, 0, 0, 917518, 0, 0, 917519, 0, 0, 851983, 0, 0, 786447, 0, 0, 720911, 0, 0, 655375, 0, 0, 589839, 0, 0, 524303, 0, 0, 458767, 0, 0, 327695, 0, 0, 262159, 0, 0, 196623, 0, 0, 131087, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 0, 0, 851984, 0, 0, 917520, 0, 0, 917521, 0, 0, 851985, 0, 0, 786449, 0, 0, 720913, 0, 0, 655377, 0, 0, 589841, 0, 0, 524305, 0, 0, 458769, 0, 0, 393233, 0, 0, 327697, 0, 0, 262161, 0, 0, 196625, 0, 0, 131089, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 786450, 0, 0, 851986, 0, 0, 917522, 0, 0, 917523, 0, 0, 851987, 0, 0, 786451, 0, 0, 720915, 0, 0, 655379, 0, 0, 589843, 0, 0, 524307, 0, 0, 458771, 0, 0, 393235, 0, 0, 327699, 0, 0, 262163, 0, 0, 196627, 0, 0, 131091, 0, 0, 131092, 0, 0, 196628, 0, 0, 262164, 0, 0, 327700, 0, 0, 393236, 0, 0, 458772, 0, 0, 524308, 0, 0, 589844, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 0, 0, 851988, 0, 0, 917524, 0, 0, 917525, 0, 0, 851989, 0, 0, 786453, 0, 0, 720917, 0, 0, 655381, 0, 0, 589845, 0, 0, 524309, 0, 0, 458773, 0, 0, 393237, 0, 0, 327701, 0, 0, 262165, 0, 0, 196629, 0, 0, 131093, 65536, 0, 131094, 0, 0, 196630, 65536, 0, 262166, 0, 0, 327702, 0, 0, 393238, 0, 0, 458774, 0, 0, 524310, 0, 0, 589846, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 851990, 0, 0, 917526, 0, 0, 917527, 0, 0, 851991, 0, 0, 786455, 65536, 0, 720919, 0, 0, 655383, 0, 0, 589847, 0, 0, 524311, 0, 0, 458775, 0, 0, 393239, 0, 0, 327703, 65536, 0, 262167, 65536, 0, 196631, 0, 0, 131095, 0, 0, 131096, 0, 0, 196632, 0, 0, 262168, 0, 0, 327704, 0, 0, 393240, 0, 0, 458776, 0, 0, 524312, 0, 0, 589848, 0, 0, 655384, 0, 0, 720920, 0, 0, 786456, 65536, 0, 851992, 0, 0, 917528, 0, 0, 917529, 0, 0, 851993, 0, 0, 786457, 65536, 0, 720921, 65536, 0, 655385, 0, 0, 589849, 0, 0, 524313, 0, 0, 458777, 0, 0, 393241, 0, 0, 327705, 0, 0, 262169, 0, 0, 196633, 0, 0, 131097, 0, 0, 131098, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 65536, 0, 786458, 65536, 0, 851994, 0, 0, 917530, 0, 0, 917531, 0, 0, 851995, 0, 0, 786459, 0, 0, 720923, 0, 0, 655387, 0, 0, 589851, 0, 0, 524315, 0, 0, 458779, 0, 0, 393243, 0, 0, 327707, 0, 0, 262171, 0, 0, 196635, 0, 0, 131099, 0, 0, 983049, 131072, 0, 1048576, 131072, 0, 1048577, 131072, 0, 1048578, 131072, 0, 1048579, 131072, 0, 1048580, 131072, 0, 1048581, 131072, 0, 1048582, 131072, 0, 1048583, 131072, 0, 1048584, 131072, 0, 1048585, 131072, 0, 1048586, 131072, 0, 1048587, 131072, 0, 1048588, 131072, 0, 1048589, 131072, 0, 1048590, 131072, 0, 1048591, 131072, 0, 1048592, 131072, 0, 1048593, 131072, 0, 1048594, 131072, 0, 1048595, 131072, 0, 1048596, 131072, 0, 1048597, 131072, 0, 1048598, 131072, 0, 1048599, 131072, 0, 1048600, 131072, 0, 1048601, 131072, 0, 1048602, 131072, 0, 1048603, 131072, 0, 1048604, 131072, 0, 1048605, 131072, 0, 983069, 131072, 0, 917533, 131072, 0, 851997, 131072, 0, 786461, 131072, 0, 720925, 131072, 0, 655389, 131072, 0, 589853, 131072, 0, 524317, 131072, 0, 458781, 131072, 0, 393245, 131072, 0, 327709, 131072, 0, 262173, 131072, 0, 196637, 131072, 0, 131101, 131072, 0, 65565, 131072, 0, 29, 131072, 0, 28, 131072, 0, 27, 131072, 0, 26, 131072, 0, 25, 131072, 0, 24, 131072, 0, 23, 131072, 0, 22, 131072, 0, 21, 131072, 0, 20, 131072, 0, 19, 131072, 0, 18, 131072, 0, 17, 131072, 0, 16, 131072, 0, 15, 131072, 0, 14, 131072, 0, 13, 131072, 0, 12, 131072, 0, 11, 131072, 0, 10, 131072, 0, 9, 131072, 0, 8, 131072, 0, 7, 131072, 0, 6, 131072, 0, 5, 131072, 0, 4, 131072, 0, 3, 131072, 0, 2, 131072, 0, 1, 131072, 0, 0, 131072, 0, 65536, 131072, 0, 131072, 131072, 0, 196608, 131072, 0, 262144, 131072, 0, 327680, 131072, 0, 393216, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 589824, 131072, 0, 655360, 131072, 0, 720896, 131072, 0, 786432, 131072, 0, 851968, 131072, 0, 917504, 131072, 0, 983040, 131072, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458765, 0, 0, 458766, 0, 0)

[node name="UnitObject0" parent="UnitsManager" instance=ExtResource("8_u5vun")]
position = Vector2(163, 168)

[node name="UnitObject1" parent="UnitsManager" instance=ExtResource("8_u5vun")]
position = Vector2(1503, 429)

[node name="Sprite2d" parent="UnitsManager/UnitObject1" index="0"]
texture = SubResource("AtlasTexture_pp6uq")

[node name="WalkingModule" type="Node2D" parent="UnitsManager"]
script = ExtResource("9_42fdl")

[node name="ShootingModule" type="Node2D" parent="UnitsManager"]
script = ExtResource("10_yumpn")

[node name="EffectManager" type="Node2D" parent="UnitsManager"]
script = ExtResource("11_cpn0u")
bullet_scene = ExtResource("12_ri7ra")

[node name="Raycaster" type="Node2D" parent="UnitsManager"]
script = ExtResource("12_pdk27")

[node name="BrainAI" type="Node2D" parent="UnitsManager"]
script = ExtResource("15_y513k")
available_actions = [ExtResource("17_gjgab"), ExtResource("18_8v7si"), ExtResource("19_2d76o")]

[node name="Line2dManager" parent="UnitsManager" instance=ExtResource("20_syji7")]

[node name="InputSystem" type="Node2D" parent="."]
script = ExtResource("10_yja2f")

[node name="CameraController" type="Node2D" parent="InputSystem"]
position = Vector2(960, 540)
script = ExtResource("11_sv5rh")

[node name="Camera2d" type="Camera2D" parent="InputSystem/CameraController"]
current = true

[connection signal="on_clicked_cell" from="UnitsManager/Pathfinding" to="UnitsManager" method="_on_pathfinding_on_clicked_cell"]
[connection signal="on_hovered_cell" from="UnitsManager/Pathfinding" to="UnitsManager" method="_on_pathfinding_on_hovered_cell"]
[connection signal="on_mouse_click" from="InputSystem" to="UnitsManager/Pathfinding" method="_on_input_system_on_mouse_click"]
[connection signal="on_mouse_hover" from="InputSystem" to="UnitsManager/Pathfinding" method="_on_input_system_on_mouse_hover"]
[connection signal="on_pressed_esc" from="InputSystem" to="UnitsManager" method="_on_input_system_on_pressed_esc"]

[editable path="UnitsManager/UnitObject1"]
